SET(APP_NAME dtEntityUnitTests)

INCLUDE_DIRECTORIES( 
  ${CMAKE_CURRENT_SOURCE_DIR}/../../include/
  ${OSG_INCLUDE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}/../../ext/UnitTest++/src
)

SET(HEADER_PATH ${CMAKE_CURRENT_SOURCE_DIR})
SET(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR})


SET(LIB_SOURCES
	 ${SOURCE_PATH}/testDynamicProperties.cpp
	 ${SOURCE_PATH}/testEntityManager.cpp
	 ${SOURCE_PATH}/testInitOsgViewer.cpp
	 ${SOURCE_PATH}/testMap.cpp
	 ${SOURCE_PATH}/testProperties.cpp
	 ${SOURCE_PATH}/testPropertyContainer.cpp
	 ${SOURCE_PATH}/testScene.cpp
	 ${SOURCE_PATH}/testScriptAccessor.cpp
	 ${SOURCE_PATH}/testSpawner.cpp
)

SET(LIBS ${OPENSCENEGRAPH_LIBRARIES}
               ${OPENTHREADS_LIBRARIES}
               dtEntity
               dtEntityOSG
               UnitTestPP
)

OPTION(BUILD_JAVASCRIPT_WRAPPERS "Build wrappers for dtScript" OFF)
IF(BUILD_JAVASCRIPT_WRAPPERS)
  INCLUDE_DIRECTORIES( ${V8_INCLUDE_DIR})

  LIST(APPEND LIB_SOURCES ${HEADER_PATH}/testV8Wrappers.cpp)

  LIST(APPEND LIBS ${V8_LIBRARIES} dtEntityWrappers)
ENDIF(BUILD_JAVASCRIPT_WRAPPERS)



ADD_EXECUTABLE(${APP_NAME}
    ${LIB_SOURCES}
)


TARGET_LINK_LIBRARIES(${APP_NAME} ${LIBS})

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEFINE_SYMBOL DT_ENTITY_UNITTEST_LIBRARY)                     

SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")

