ADD_SUBDIRECTORY(dtEntity)
ADD_SUBDIRECTORY(dtEntitySimulation)

OPTION(BUILD_QT "Build Qt widgets" OFF)
OPTION(BUILD_CEGUI_WRAPPER "Build CEGUI module" OFF)

OPTION(BUILD_LIBROCKET "Build LibRocket bindings" OFF)
IF(BUILD_LIBROCKET)
	ADD_SUBDIRECTORY(osgLibRocket)
	ADD_SUBDIRECTORY(dtEntityRocket)
ENDIF(BUILD_LIBROCKET)

IF(BUILD_TESTS)
  ADD_SUBDIRECTORY(dtEntityUnitTests)
ENDIF(BUILD_TESTS)

OPTION(BUILD_JAVASCRIPT_WRAPPERS "Build wrappers for dtScript" OFF)
IF(BUILD_JAVASCRIPT_WRAPPERS)
  ADD_SUBDIRECTORY(dtEntityWrappers)
  ADD_SUBDIRECTORY(dtEntityScript)
  ADD_SUBDIRECTORY(dtEntityV8Plugin)
ENDIF(BUILD_JAVASCRIPT_WRAPPERS)


IF(BUILD_QT)
   ADD_SUBDIRECTORY(dtEntityQtWidgets)
   IF(BUILD_JAVASCRIPT_WRAPPERS)
	  ADD_SUBDIRECTORY(dtEntityEditor)	  
   ENDIF(BUILD_JAVASCRIPT_WRAPPERS)
ENDIF(BUILD_QT)