ADD_SUBDIRECTORY(dtEntity)

OPTION(BUILD_OSG_COMPONENTS "Build OSG components" ON)
IF(BUILD_OSG_COMPONENTS)
	ADD_SUBDIRECTORY(dtEntityOSG)	
		
	OPTION(BUILD_LIBROCKET "Build LibRocket bindings" OFF)
	IF(BUILD_LIBROCKET)
		ADD_SUBDIRECTORY(osgLibRocket)
		ADD_SUBDIRECTORY(dtEntityRocket)
	ENDIF(BUILD_LIBROCKET)

	OPTION(BUILD_CLOUDS "Build clouds component" ON)
	IF(BUILD_CLOUDS)
		ADD_SUBDIRECTORY(dtEntityClouds)
	ENDIF(BUILD_CLOUDS)
	
		
	FIND_PACKAGE(CEGUI)
	IF(CEGUI_FOUND)
		ADD_SUBDIRECTORY(dtEntityCEGUI)
		ADD_SUBDIRECTORY(dtEntityCEGUIPlugin)
	ENDIF(CEGUI_FOUND)
	
	OPTION(BUILD_QT "Build Qt widgets" OFF)
	IF(BUILD_QT)
	   ADD_SUBDIRECTORY(dtEntityQtWidgets)
	   IF(BUILD_JAVASCRIPT_WRAPPERS)
		  ADD_SUBDIRECTORY(dtEntityEditor)	  
	   ENDIF(BUILD_JAVASCRIPT_WRAPPERS)
	ENDIF(BUILD_QT)
	
	OPTION(BUILD_JAVASCRIPT_WRAPPERS "Build wrappers for dtScript" OFF)
	IF(BUILD_JAVASCRIPT_WRAPPERS)
	  ADD_SUBDIRECTORY(dtEntityWrappers)
	  ADD_SUBDIRECTORY(dtEntityScript)
	  ADD_SUBDIRECTORY(dtEntityV8Plugin)
	ENDIF(BUILD_JAVASCRIPT_WRAPPERS)

ENDIF(BUILD_OSG_COMPONENTS)



IF(BUILD_TESTS)
  ADD_SUBDIRECTORY(dtEntityUnitTests)
  IF(BUILD_OSG)
    ADD_SUBDIRECTORY(dtEntityOSGUnitTests)
  ENDIF(BUILD_OSG)
ENDIF(BUILD_TESTS)





FIND_PACKAGE(ENet)
FIND_PACKAGE(ProtoBuf)
IF(ENET_FOUND AND PROTOBUF_FOUND)
  ADD_SUBDIRECTORY(dtEntityNet)
  ADD_SUBDIRECTORY(dtEntityNetPlugin)
ENDIF(ENET_FOUND AND PROTOBUF_FOUND)

FIND_PACKAGE(DISIINterface)
IF(DISIINTERFACE_FOUND)
  ADD_SUBDIRECTORY(dtEntityDISI)
  ADD_SUBDIRECTORY(disiTest)
ENDIF(DISIINTERFACE_FOUND)