SET(APP_NAME dtEntityScript)

IF (WIN32)
ADD_DEFINITIONS(-DNOMINMAX)
ENDIF (WIN32)

INCLUDE_DIRECTORIES( 
  ${CMAKE_SOURCE_DIR}/${INC_DIR}  
  ${CMAKE_CURRENT_SOURCE_DIR}/../../include/
  ${OSG_INCLUDE_DIRS}
)

SET(APP_SOURCES
    dtentityscript.cpp
)

ADD_EXECUTABLE(${APP_NAME}
    ${APP_SOURCES}
)

IF(DTENTITY_LIBRARY_STATIC)
    SET(DTENTITY_PLUGINS dtEntitySimulation dtEntityV8Plugin dtEntityRocket)
ENDIF(DTENTITY_LIBRARY_STATIC)

TARGET_LINK_LIBRARIES(${APP_NAME}  
					  dtEntity       
					  ${OSG_LIBRARIES}     
					  ${DTENTITY_PLUGINS}
)
                     
INCLUDE(ModuleInstall OPTIONAL)


SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES IMPORT_PREFIX "../")
SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
