SET(LIB_NAME dtEntityV8Plugin)

INCLUDE_DIRECTORIES( 
  ${CMAKE_CURRENT_SOURCE_DIR}/../../include/
  ${OSG_INCLUDE_DIRS}
)

SET(SOURCE_PATH ${CMAKE_CURRENT_SOURCE_DIR})


SET(LIB_SOURCES
	 ${SOURCE_PATH}/pluginfactory.cpp
)

ADD_LIBRARY(${LIB_NAME} SHARED
    ${LIB_SOURCES}
)


TARGET_LINK_LIBRARIES(${LIB_NAME}     
               dtEntity
               dtEntityWrappers
)

SET_TARGET_PROPERTIES(${LIB_NAME}
                     PROPERTIES DEFINE_SYMBOL DT_ENTITY_V8_LIBRARY)                     
INCLUDE(ModuleInstall OPTIONAL)

IF (MSVC)
   install(TARGETS ${LIB_NAME}
      ARCHIVE
      DESTINATION lib
      COMPONENT libs
   )
   install(TARGETS ${LIB_NAME}
      RUNTIME
      DESTINATION bin/plugins
      COMPONENT application
   )
ENDIF (MSVC)

IF (MSVC)
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES OUTPUT_NAME plugins/${LIB_NAME})
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES DEBUG_OUTPUT_NAME plugins/${LIB_NAME})
ENDIF (MSVC) 
