FIND_PACKAGE(OSGCAL REQUIRED)

SET(TARGET_ADDED_LIBRARIES ${OSGCAL_LIBRARIES} ${CAL3D_LIBRARIES})

INCLUDE_DIRECTORIES( 
  ${OSGCAL_INCLUDE_DIR}
  ${CAL3D_INCLUDE_DIR}
)

SET(TARGET_H
   cal3dcomponent.h
)

SET(TARGET_SRC cal3dcomponent.cpp
	           pluginfactory.cpp
)

SETUP_PLUGIN(dtEntityCal3d)
