SET(APP_NAME testNet)

IF (WIN32)
ADD_DEFINITIONS(-DNOMINMAX)
ENDIF (WIN32)


INCLUDE_DIRECTORIES( 
  ${CMAKE_SOURCE_DIR}/${INC_DIR}  
  ${CMAKE_CURRENT_SOURCE_DIR}/../../include/
  ${DELTA3D_INCLUDE_DIR}
  ${OSG_INCLUDE_DIRS}
)

SET(APP_SOURCES
    testnet.cpp
)

ADD_EXECUTABLE(${APP_NAME}
    ${APP_SOURCES}
)

TARGET_LINK_LIBRARIES(${APP_NAME}     
					  dtEntity    
					  dtEntityENet
					  ${OSG_LIBRARIES}
)
                     
INCLUDE(ModuleInstall OPTIONAL)

IF (MSVC_IDE)
  
  SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES IMPORT_PREFIX "../")
  SET_TARGET_PROPERTIES(${APP_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
ENDIF (MSVC_IDE)

